// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GeoJsonTransformOp > should apply combined transformations in correct order 1`] = `
{
  "geometry": {
    "coordinates": [
      [
        [
          0.2171154745038848,
          0.08993204290033596,
        ],
        [
          0.08993213166627356,
          -0.03725106262943238,
        ],
        [
          -0.037251100438425055,
          0.08993202984458545,
        ],
        [
          0.08993245806163941,
          0.2171151353743263,
        ],
        [
          0.2171154745038848,
          0.08993204290033596,
        ],
      ],
    ],
    "type": "Polygon",
  },
  "properties": {
    "altitude": 0,
  },
  "type": "Feature",
}
`;

exports[`GeoJsonTransformOp > should rotate a feature around its centroid 1`] = `
{
  "geometry": {
    "coordinates": [
      [
        [
          0.04496602280210027,
          -0.044966013570317175,
        ],
        [
          -0.04496602280210027,
          -0.04496601357032691,
        ],
        [
          -0.04496602280210027,
          0.044966013570326875,
        ],
        [
          0.04496602280210027,
          0.044966013570317154,
        ],
        [
          0.04496602280210027,
          -0.044966013570317175,
        ],
      ],
    ],
    "type": "Polygon",
  },
  "properties": {
    "altitude": 0,
  },
  "type": "Feature",
}
`;

exports[`GeoJsonTransformOp > should scale a feature from its centroid 1`] = `
{
  "geometry": {
    "coordinates": [
      [
        [
          0.08993206406785248,
          0.08993203637245381,
        ],
        [
          0.08993206406785248,
          -0.08993203637245377,
        ],
        [
          -0.08993206406785248,
          -0.08993203637245377,
        ],
        [
          -0.08993206406785248,
          0.08993203637245378,
        ],
        [
          0.08993206406785248,
          0.08993203637245381,
        ],
      ],
    ],
    "type": "Polygon",
  },
  "properties": {
    "altitude": 0,
  },
  "type": "Feature",
}
`;

exports[`GeoJsonTransformOp > should translate a feature 1`] = `
{
  "geometry": {
    "coordinates": [
      [
        [
          0.08993206868376546,
          0.08993203637245381,
        ],
        [
          0.08993204098840124,
          1.2424041724466862e-17,
        ],
        [
          4.615912985173054e-9,
          1.2424041724466862e-17,
        ],
        [
          3.231139089621138e-8,
          0.08993203637245381,
        ],
        [
          0.08993206868376546,
          0.08993203637245381,
        ],
      ],
    ],
    "type": "Polygon",
  },
  "properties": {
    "altitude": 0,
  },
  "type": "Feature",
}
`;
